# xfetch

./: .copier-answers.yml  .gitignore  pyproject.toml
src/xfetch/: cache.py  format.py  main.py  models.py  paths.py  secrets.py  summarizer.py
src/xfetch/fetcher/: base.py  by_url.py
src/xfetch/fetcher/site/: amazon.py  common.py
src/xfetch/renderer/: base.py  basic.py  byname.py  markdown.py
tests/: conftest.py
tests/fetcher/site/: test_amazon.py
