[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xfetch"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
xfetch = "xfetch.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/xfetch"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
