[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xfetch"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.4.2",
    "dictlib>=1.1.5",
    "diskcache>=5.6.3",
    "platformdirs>=4.10.0",
    "pydantic>=2.13.4",
    "zyte-api>=0.10.0",
]

[project.scripts]
xfetch = "xfetch.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/xfetch"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["dictlib", "diskcache"]
ignore_missing_imports = true
